Style.css update

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
                 Score: <span class="scoreValue">0</span>
             </span>
             <span class="bullets">
-                <img src="menu/sprLaserPlayer.png"><span class="bulletsValue">0</span>
+                <img src="menu/Mics-Bullet-icon.png"><span class="bulletsValue">0</span>
             </span>
             <span class="hp">
                 <img src="menu/hearth.png" ><span class="hpValue">0</span>
