--- a/index.html
+++ b/index.html
@@ -1,27 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <title>Space Shooter Game</title>
-</head>
-<body>
-    <div class="container">
-        <div class="menu">
-            <span class="score">
-                Score: <span class="scoreValue">0</span>
-            </span>
-            <span class="bullets">
-                <img src="menu/Mics-Bullet-icon.png"><span class="bulletsValue">0</span>
-            </span>
-            <span class="hp">
-                <img src="menu/hearth.png" ><span class="hpValue">0</span>
-            </span>
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="style.css">
+        <title>Space Shooter</title>
+    </head>
+
+    <body>
+        <div class="container">
+            <div class="menu">
+                <span class="score"> 
+                    Score: <span class="scoreValue">5</span>
+                </span>
+
+                <span class="bullets">
+                    <img src="menu//Mics-Bullet-icon.png"> <span class="bulletsValue">10</span>
+                </span>
+
+                <span class="hp">
+                    <img src="menu/hp.png"> <span class="hpValue">5</span> 
+                </span>
+            </div>
+            <canvas id="canvas"></canvas>
+            
         </div>
-        <canvas id="canvas"></canvas>
-    </div>
-    <script src="index.js"></script>
-</body>
+        
+        <script src="index.js"></script>
+    </body>
 </html>
